3.0.4 fix release more tests